# primeiro_ETL

./: README.md  arquivo.csv  arquivo.parquet  le_arquivo.py  pipeline.py  pyproject.toml  uso decorators.py  uso_log.py
data/: dicion1.json  dicion2.json
