[tool.poetry]
name = "l- primeiro etl"
version = "0.1.0"
description = ""
authors = ["Fernando Breseghello <fnbreseghello@gmail.com>"]
readme = "README.md"
packages = [{include = "l"}]

[tool.poetry.dependencies]
python = "^3.11.6"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
