[tool.poetry]
name = "l- primeiro etl"
version = "0.1.0"
description = ""
authors = ["Fernando Breseghello <fnbreseghello@gmail.com>"]
readme = "README.md"
packages = [{include = "l"}]

[tool.poetry.dependencies]
python = "^3.11.6"
pandas = "^2.2.3"
fastparquet = "^2024.11.0"
loguru = "^0.7.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
